add whoami endpoint and miner fixes
