# src/routes/auth.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const { signup, login } = require('../controllers/authController');
+const { signup, login, whoAmI } = require('../controllers/authController');
 
 router.post('/signup', signup);
 router.post('/login', login);
+router.get('/who-am-i', whoAmI);
 
 module.exports = router;
